[package]
name = "web-crawler"
version = "0.1.0"
authors = ["Alex Gajewski <agajews@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.6", features = ["blocking", "gzip", "brotli"] }
select = "0.4.3"
regex = "1.3.9"
lazy_static = "1.4.0"
percent-encoding = "2.1.0"
url = "2.1.1"
rayon = "1.3.0"
serde = "1.0"
bincode = "1.2.1"
web-index = { path = "web-index" }
sled = "0.31.0"
uuid = { version = "0.8.1", features = ["v4"] }
rand = "0.7.3"
hex = "0.4.2"
