[package]
name = "web-crawler"
version = "0.1.0"
authors = ["Alex Gajewski <agajews@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.4.3"
regex = "1.3.9"
lazy_static = "1.4.0"
url = "2.1.1"
serde = "1.0"
bincode = "1.2.1"
crossbeam = "0.7.3"
cbloom = "0.1.3"
fasthash = "0.4.0"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "time", "io-driver"] }
rand = "0.7.3"
http = "0.2.1"
isahc = "0.9.4"
