[package]
name = "web-crawler"
version = "0.1.0"
authors = ["Alex Gajewski <agajews@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.4.3"
regex = "1.3.9"
lazy_static = "1.4.0"
url = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
crossbeam = "0.7.3"
cbloom = "0.1.3"
fasthash = "0.4.0"
tokio = { version = "0.2", features = ["macros", "rt-core", "time", "io-driver", "fs"] }
rand = "0.7.3"
http = "0.2.1"
reqwest = { version = "0.10.6", features = ["blocking", "native-tls", "trust-dns", "stream"] }
futures = "0.3.5"
core_affinity = "0.5.10"
futures-util = "0.3.5"
sled = "0.32.0"
pnet = "0.26.0"
