[package]
name = "web-index"
version = "0.1.0"
authors = ["Alex Gajewski <agajews@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
sled = "0.31.0"
rand = "0.7.3"
tokio = { version = "0.2", features = ["macros", "rt-core", "time", "io-driver", "fs", "sync"] }
