[package]
name = "web-query"
version = "0.1.0"
authors = ["Alex Gajewski <agajews@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-index = { path = "../web-index" }
tokio = { version = "0.2", features = ["macros", "rt-core", "time", "io-driver", "fs"] }
bincode = "1.2.1"
packed_simd = "0.3.3"
