[package]
name = "web-query"
version = "0.1.0"
authors = ["Alex Gajewski <agajews@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-index = { path = "../web-index" }
packed_simd = "0.3.3"
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", features = ["tera_templates"] }
serde = "1.0.114"
